fixed some viewport height issues on mobile

--- a/src/Components/Core/Presentation/React/ReactRelated/ReactEntryPoint/App.css
+++ b/src/Components/Core/Presentation/React/ReactRelated/ReactEntryPoint/App.css
@@ -59,6 +59,10 @@
   } */
 }
 
+body {
+  background-color: #a1c8e5;
+}
+
 /*Styles für die Anzeige des Inspectors*/
 
 #inspector-host,
